--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -36,6 +36,7 @@
     {% endif %}
 
     {{ 'base.css' | asset_url | stylesheet_tag }}
+    <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
 
     {{ content_for_header }}
 
