--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -59,7 +59,7 @@
       {{ 'accessibility.skip_to_text' | t }}
     </a>
 
-    {% section 'announcement-bar' %}
+    {% comment %} {% section 'announcement-bar' %} {% endcomment %}
     {% section 'header' %}
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
